pre-accept the mouse event before childMouseEventFilter; grab after

In 5.9 a typical filtering sequence would be

deliverPressEvent -> deliverMatchingPointsToItem -> QQuickWindow::sendEvent ->
sendFilteredMouseEvent -> Test::childMouseEventFilter, let's say it returns true;
then because the event is accepted, deliverMatchingPointsToItem grabs the mouse.

In 5.10, we rather do

deliverPressOrReleaseEvent -> sendFilteredPointerEvent -> sendFilteredPointerEventImpl ->
Test::childMouseEventFilter, which returns true; and in this case, setGrabberItem
was missing until now.

In case of touch rather than mouse, it grabs the touchpoints in this
kind of scenario.

Also made the failsafe more reliable to ensure that no grabs are retained
after release (after seeing that one failing autotest can cause failures
in subsequent tests).

Done-with: Jan-Arve Sæther
Task-number: QTBUG-62631
Task-number: QTBUG-62549
Task-number: QTBUG-62628
Change-Id: I16dafc9aa0de2fc163c524f7f5b109f82d7e84fd
Reviewed-by: Jan Arve Sæther <jan-arve.saether@qt.io>